--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -9,3 +9,16 @@
 .form-control,.btn{
     margin: 5px;
 }
+.avatar{
+    width: 100%;
+    height: 50%
+}
+
+.card{
+    width:15rem;
+    margin-top: 10px;
+    
+}
+.card-header{
+    padding: 0;
+}
